# rtic-stm32f3-starter

./: Cargo.toml  LICENSE-APACHE  README.md
.cargo/: config.toml
src/: lib.rs
