[package]
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
name = "rtic-stm32f3-template"
edition = "2018"
version = "0.1.0"
description = "Use `DEFMT_LOG=trace cargo run` to see logs."

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
dwt-systick-monotonic = "1.0.0"
fugit = "0.3.3"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# This revision has version `0.8.1` and, importantly,
# uses cortex-m-rt `0.7` which allows to use defmt `0.3`.
[dependencies.stm32f3xx-hal]
git = "https://github.com/stm32-rs/stm32f3xx-hal.git"
rev = "e069b0ed2790a34522c97c5dfcf19e72fbc83146"
features = ["ld", "rt", "stm32f303xc"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
